--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -220,6 +220,7 @@
                         <MenuItem Style="{StaticResource ToolbarMenuItemStyle}"
                             ToolTip="プロファイル"
                             x:Name="MenuItem_Profile"
+                            SubmenuOpened="MenuItem_Profile_SubmenuOpened"
                                   >
                             <MenuItem.Header>
                                 <Border Margin="-5,0,0,0"
@@ -229,12 +230,12 @@
                                         RenderOptions.BitmapScalingMode="NearestNeighbor" ></Image>
                                 </Border>
                             </MenuItem.Header>
-                                <MenuItem Header="書籍用(右綴じ)"  IsCheckable="True"/>
-                                <MenuItem Header="書籍用(左綴じ)"  IsCheckable="True"/>
-                                <Separator/>
                                 <MenuItem Header="新規作成" Click="Toolbar_Profile_New_Click"/>
                                 <MenuItem Header="リストの編集"/>
+                                <!--<Separator/>
                                 <MenuItem Header="デフォルト"/>
+                                <MenuItem Header="書籍用(右綴じ)"  IsCheckable="True"/>
+                                <MenuItem Header="書籍用(左綴じ)"  IsCheckable="True"/>-->
                         </MenuItem>
                     </Menu>
                 </Border>
@@ -371,7 +372,7 @@
 
         <!-- 読み込み中メッセージ -->
         <Grid x:Name="WaitingMessageBase"
-                   Background="White" Opacity="0.8" Visibility="Hidden" >
+                   Background="White" Opacity="0.8" Visibility="Hidden" Margin="0,-6,0,6" >
             <Label HorizontalAlignment="Center" 
                    VerticalAlignment="Center" 
                    FontSize="25"
