--- a/C-SlideShow/ProfileEditDialog.xaml
+++ b/C-SlideShow/ProfileEditDialog.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Closing="Window_Closing"
         Title="プロファイルの作成"
-        Height="2000" Width="500">
+        Height="700" Width="500">
 
     <Window.Resources>
         <!-- スタイル定義 -->
@@ -38,7 +38,7 @@
     </Window.Resources>
 
     <Grid>
-        <ScrollViewer Margin="0,0,0,50">
+        <ScrollViewer x:Name="MainScrollViewer" Margin="0,0,0,60">
             <StackPanel Orientation="Vertical">
                 <Label x:Name="Label_Message" Margin="10,10,10,0"
                        Content="現在の状態・設定をプロファイルとして保存することが出来ます。
@@ -82,7 +82,7 @@
                     <StackPanel Orientation="Vertical">
                         <!-- フォルダ・ファイル -->
                         <StackPanel Orientation="Horizontal">
-                            <CheckBox x:Name="PfCheckBoxd_Path" Style="{StaticResource ProfileCheckboxStyle}">フォルダ・ファイル</CheckBox>
+                            <CheckBox x:Name="PfCheckBox_Path" Style="{StaticResource ProfileCheckboxStyle}">フォルダ・ファイル</CheckBox>
                             <StackPanel Orientation="Vertical">
                                 <TextBox x:Name="Path" MinWidth="250" Width="300"></TextBox>
                                 <Label>↑にドロップすることで、項目を追加出来ます</Label>
@@ -118,10 +118,10 @@
                 <!-- グリッドのアスペクト比 -->
                 <GroupBox Header="グリッドのアスペクト比" Style="{StaticResource GroupBoxStyle}">
                     <StackPanel Orientation="Vertical">
-                        <!-- アスペクト比を非固定 -->
+                        <!-- アスペクト比を固定 -->
                         <StackPanel Orientation="Horizontal">
-                            <CheckBox x:Name="PfCheckBox_NonFixAspectRatio" Style="{StaticResource ProfileCheckboxStyle}">アスペクト比を非固定に</CheckBox>
-                            <ComboBox x:Name="NonFixAspectRatio" Style="{StaticResource ComboBoxStyle}" Width="60" SelectedIndex="0">
+                            <CheckBox x:Name="PfCheckBox_FixAspectRatio" Style="{StaticResource ProfileCheckboxStyle}">アスペクト比を固定</CheckBox>
+                            <ComboBox x:Name="FixAspectRatio" Style="{StaticResource ComboBoxStyle}" Width="60" SelectedIndex="0">
                                 <ComboBoxItem>する</ComboBoxItem>
                                 <ComboBoxItem>しない</ComboBoxItem>
                             </ComboBox>
@@ -179,7 +179,7 @@
                         <!-- スライド時間(ms) -->
                         <StackPanel Orientation="Horizontal">
                             <CheckBox x:Name="PfCheckBox_SlideTimeInIntevalMethod" Style="{StaticResource ProfileCheckboxStyle}">スライド時間(ms)</CheckBox>
-                            <cc:NumericUpDown x:Name="SlideTimeInIntevalMethod" Width="55"></cc:NumericUpDown>
+                            <cc:NumericUpDown x:Name="SlideTimeInIntevalMethod" Variation="100" Width="55"></cc:NumericUpDown>
                         </StackPanel>
                         <!-- 画像一枚ずつスライド -->
                         <StackPanel Orientation="Horizontal">
@@ -243,7 +243,7 @@
                         <!-- バックバッファのサイズ(ピクセル値) -->
                         <StackPanel Orientation="Horizontal">
                             <CheckBox x:Name="PfCheckBox_BitmapDecodeTotalPixel" Style="{StaticResource ProfileCheckboxStyle}">バックバッファのサイズ(ピクセル値)</CheckBox>
-                            <cc:NumericUpDown x:Name="BitmapDecodeTotalPixel" Width="55"></cc:NumericUpDown>
+                            <cc:NumericUpDown x:Name="BitmapDecodeTotalPixel" Width="55" Variation="100"></cc:NumericUpDown>
                         </StackPanel>
                     </StackPanel>
                 </GroupBox>
@@ -329,8 +329,23 @@
         </ScrollViewer>
 
         <!-- フッター -->
-        <Grid VerticalAlignment="Bottom" Height="50" Background="Blue">
-            
+        <Grid VerticalAlignment="Bottom" Height="60" Background="WhiteSmoke">
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical">
+                    <Button x:Name="Footer_CheckAll" Click="Footer_CheckAll_Click" Width="75" FontSize="10" Height="20" Margin="4">全てチェック</Button>
+                    <Button x:Name="Footer_UnCheckAll" Click="Footer_UnCheckAll_Click" Width="75" FontSize="10" Height="20" Margin="4,0">全てチェックを外す</Button>
+                </StackPanel>
+                <StackPanel Margin="100,0" Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal">
+                        <Label>プロファイル名</Label>
+                        <ComboBox x:Name="Footer_ProfileName" IsEditable="True" Width="200" Margin="0,2"></ComboBox>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button x:Name="Footer_Cancel" Click="Footer_Cancel_Click" Height="22" Margin="5" Width="70" HorizontalAlignment="Right">キャンセル</Button>
+                        <Button x:Name="Footer_OK" Click="Footer_OK_Click" Height="22" Margin="5,5,0,5" Width="70" HorizontalAlignment="Right">OK</Button>
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
