プロファイルに項目追加： 自動再生（プロファイル読み込み後）
プロファイルで「透過有効、ウインドウ位置サイズ指定」を有効にすると、位置サイズが適用されなかった問題も修正

--- a/C-SlideShow/ProfileEditDialog.xaml
+++ b/C-SlideShow/ProfileEditDialog.xaml
@@ -190,11 +190,12 @@
                                 <ComboBoxItem>させない</ComboBoxItem>
                             </ComboBox>
                         </StackPanel>
-                        <!-- 自動再生 (保留)-->
-                        <StackPanel Orientation="Horizontal" Visibility="Collapsed">
-                            <CheckBox Style="{StaticResource ProfileCheckboxStyle}">自動再生</CheckBox>
-                            <Label>読み込み後、スライドショーを開始</Label>
-                            <ComboBox Width="60" SelectedIndex="0">
+                        <Line Style="{StaticResource SeparateLine}"></Line>
+                        <!-- 自動再生 -->
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox x:Name="PfCheckBox_SlideShowAutoStart" Style="{StaticResource ProfileCheckboxStyle}">自動再生</CheckBox>
+                            <Label>読み込み後、自動でスライドショーを開始</Label>
+                            <ComboBox x:Name="SlideShowAutoStart" Width="60" SelectedIndex="0">
                                 <ComboBoxItem>する</ComboBoxItem>
                                 <ComboBoxItem>しない</ComboBoxItem>
                             </ComboBox>
