フォルダ(書庫)履歴の設定ダイアログを作成
+ 開いたフォルダ(書庫)の履歴を保存する
+ 付随して保存する情報(5項目)
+ 保存する履歴の上限数
+ 新たにフォルダ（書庫）を開いた時、それが履歴にあるなら、その履歴情報の設定を適用する
+ メニューに表示する履歴の上限数
+ ○個以上履歴がある場合、サブメニューに表示
+ 履歴を削除する(ボタン)

--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -118,7 +118,9 @@
                                 <MenuItem Header="フォルダを追加読み込み" Click="Toolbar_Add_Folder_Click" x:Name="Toolbar_Add_Folder"/>
                                 <MenuItem Header="ファイルを追加読み込み" Click="Toolbar_Add_File_Click" x:Name="Toolbar_Add_File"/>
                                 <Separator/>
-                                <MenuItem Header="再読込み" Click="Toolbar_Load_Reload_Click" x:Name="Toolbar_Load_Reload"/>
+                                <MenuItem Header="再読み込み" Click="Toolbar_Load_Reload_Click" x:Name="Toolbar_Load_Reload"/>
+                                <Separator/>
+                                <MenuItem Header="履歴設定..." Click="Toolbar_Load_HistorySetting_Click" x:Name="Toolbar_Load_HistorySetting"/>
                         </MenuItem>
                     </Menu>
                 </Border>
