--- a/C-SlideShow/MainWindow.xaml
+++ b/C-SlideShow/MainWindow.xaml
@@ -156,6 +156,7 @@
                         <MenuItem Style="{StaticResource ToolbarMenuItemStyle}"
                             ToolTip="グリッドのアスペクト比"
                             x:Name="MenuItem_AspectRatio"
+                            SubmenuOpened="MenuItem_AspectRatio_SubmenuOpened"
                                   >
                             <MenuItem.Header>
                                 <Border Margin="-5,0,0,0"
@@ -164,15 +165,8 @@
                                     <TextBlock x:Name="Toolbar_AspectRate_Text" TextAlignment="Center" Text="4 : 3"></TextBlock>
                                 </Border>
                             </MenuItem.Header>
-                                <MenuItem Header="非固定" Tag="FREE" IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_Free"/>
-                                <Separator/>
                                 <MenuItem Header="4 : 3"  Tag="4_3"  IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_4_3"/>
-                                <MenuItem Header="3 : 4"  Tag="3_4"  IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_3_4"/>
                                 <MenuItem Header="16 : 9" Tag="16_9" IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_16_9"/>
-                                <MenuItem Header="9 : 16" Tag="9_16" IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_9_16"/>
-                                <MenuItem Header="3 : 2"  Tag="3_2"  IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_3_2"/>
-                                <MenuItem Header="2 : 3"  Tag="2_3"  IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_2_3"/>
-                                <MenuItem Header="1 : 1"  Tag="1_1"  IsCheckable="True" Click="Toolbar_AspectRate_Click" x:Name="Toolbar_AspectRate_1_1"/>
                         </MenuItem>
                     </Menu>
                 </Border>
