--- a/C-SlideShow/ProfileEditDialog.xaml
+++ b/C-SlideShow/ProfileEditDialog.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Closing="Window_Closing"
         Title="プロファイルの作成"
-        Height="700" Width="500">
+        Height="720" Width="500">
 
     <Window.Resources>
         <!-- スタイル定義 -->
@@ -249,6 +249,40 @@
                         </StackPanel>
                     </StackPanel>
                 </GroupBox>
+
+                <!-- その他/配置 -->
+                <GroupBox Header="その他/配置" Style="{StaticResource GroupBoxStyle}">
+                    <StackPanel Orientation="Vertical">
+                        <!-- 画像の配置方法 -->
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox x:Name="PfCheckBox_UseDefaultTileOrigin" Style="{StaticResource ProfileCheckboxStyle}">画像の配置方法</CheckBox>
+                            <ComboBox x:Name="UseDefaultTileOrigin" Style="{StaticResource ComboBoxStyle}" Width="200" SelectedIndex="0">
+                                <ComboBoxItem>スライド方向から自動で決定する</ComboBoxItem>
+                                <ComboBoxItem>以下で指定する</ComboBoxItem>
+                            </ComboBox>
+                        </StackPanel>
+                        <!-- 配置する起点 -->
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox x:Name="PfCheckBox_TileOrigin" Style="{StaticResource ProfileCheckboxStyle}">配置する起点</CheckBox>
+                            <ComboBox x:Name="TileOrigin" Style="{StaticResource ComboBoxStyle}" Width="55" SelectedIndex="0">
+                                <ComboBoxItem>左上</ComboBoxItem>
+                                <ComboBoxItem>右上</ComboBoxItem>
+                                <ComboBoxItem>右下</ComboBoxItem>
+                                <ComboBoxItem>左下</ComboBoxItem>
+                            </ComboBox>
+                        </StackPanel>
+                        <!-- 配置方向 -->
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox x:Name="PfCheckBox_TileOrientation" Style="{StaticResource ProfileCheckboxStyle}">配置方向</CheckBox>
+                            <ComboBox x:Name="TileOrientation" Style="{StaticResource ComboBoxStyle}" Width="55" SelectedIndex="0">
+                                <ComboBoxItem>横</ComboBoxItem>
+                                <ComboBoxItem>縦</ComboBoxItem>
+                            </ComboBox>
+                        </StackPanel>
+
+                    </StackPanel>
+                </GroupBox>
+
 
                 <!-- その他/外観1 -->
                 <GroupBox Header="その他/外観1" Style="{StaticResource GroupBoxStyle}">
