--- a/C-SlideShow/SettingDialog.xaml
+++ b/C-SlideShow/SettingDialog.xaml
@@ -59,7 +59,7 @@
                         </ComboBox>
                     </StackPanel>
 
-                    <Button x:Name="GlobalSetting" Click="GlobalSetting_Click" Width="94" HorizontalAlignment="Left" Margin="0,10">グローバル設定...</Button>
+                    <Button x:Name="AppSettingButton" Click="AppSettingButton_Click" Width="94" HorizontalAlignment="Left" Margin="0,10">アプリの設定...</Button>
                     <CheckBox Visibility="Hidden" x:Name="StartUp_OpenPrevFolder" Click="StartUp_OpenPrevFolder_Click" Margin="0,4">起動時、前回のフォルダを開く</CheckBox>
                 </StackPanel>
             </TabItem>
