--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -100,6 +100,7 @@
             <TabItem Header="詳細" Width="70">
                 <StackPanel Margin="10">
                     <CheckBox x:Name="ShowMenuItem_AdditionalRead">「フォルダを追加読み込み」「ファイルを追加読み込み」を読み込みメニューに表示する</CheckBox>
+                    <CheckBox Margin="0,5" x:Name="SerachAllDirectoriesInFolderReading">フォルダ読み込み時、サブディレクトリ以下のファイルも読み込む</CheckBox>
                 </StackPanel>
             </TabItem>
 
